--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Go
 
-on: push
+on:
+  push:
+    tags: ["v*"]
 
 jobs:
 
@@ -23,12 +25,7 @@ jobs:
     - name: Check
       run: ls dist/
 
-    - uses: actions/upload-artifact@v2
-      with:
-        path: dist/
-
     - name: Release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: dist/*
